syntax = "proto3";

package github.com.chanyoung.nil.pkg.mds.mdspb;
option go_package = "mdspb";

import "github.com/chanyoung/nil/pkg/swim/swimpb/swim.proto";

message PrintMapRequest {

}

message PrintMapResponse {
    repeated swimpb.Member memlist = 1;
}

message AddUserRequest {
    string name = 1;
}

message AddUserResponse {
    string accessKey = 1;
    string secretKey = 2;
}

service Mds {
    rpc printMap (PrintMapRequest) returns (PrintMapResponse) {}
    rpc AddUser (AddUserRequest) returns (AddUserResponse) {}
}